reconrec/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input LOAD
   3        | input SHOWCONTEXT DOUBLESEMI
   4        | input DOUBLESEMI
   5        | input oneREPL

   6  oneREPL : Command DOUBLESEMI
   7          | Command SEMI oneREPL

   8  toplevel : EOF
   9           | Command SEMI toplevel

  10  Command : TmWrap
  11          | UCID TyBinder
  12          | LCID Binder

  13  TyBinder :
  14           | EQ Ty

  15  Binder : COLON Ty
  16         | EQ Tm

  17  Ty : ArrowTy
  18     | REC UCID DOT Ty
  19     | REFTYPE ATy
  20     | SOURCE ATy
  21     | SINK ATy

  22  ArrowTy : ATy ARROW ArrowTy
  23          | ATy

  24  ATy : LPAREN Ty RPAREN
  25      | UCID
  26      | TOP
  27      | FLOAT
  28      | STRING
  29      | BOOL
  30      | NAT
  31      | UNITTYPE
  32      | LCURLY TyFields RCURLY
  33      | LT TyFields GT
  34      | LIST Ty

  35  LTy : LSQUARE Ty RSQUARE

  36  TyFields :
  37           | NETyFields

  38  NETyFields : TyField
  39             | TyField COMMA NETyFields

  40  TyField : LCID COLON Ty
  41          | Ty

  42  TmWrap : TmWrap COMMA LCID EQ Tm
  43         | Tm WHERE LCID EQ Tm
  44         | Tm

  45  Cases : Case
  46        | Case VBAR Cases

  47  Case : LT LCID EQ LCID GT DARROW AppTm

  48  Tm : AppTm
  49     | LAM LCID DOT Tm
  50     | LAM LCID COLON Ty DOT Tm
  51     | LAM USCORE COLON Ty DOT Tm
  52     | IF Tm THEN Tm ELSE Tm
  53     | LET LCID EQ Tm IN Tm
  54     | LET USCORE EQ Tm IN Tm
  55     | LETREC LCID COLON Ty EQ Tm IN Tm
  56     | CASE Tm OF Cases
  57     | AppTm COLONEQ AppTm
  58     | CONS LTy ATm ATm
  59     | HEAD LTy ATm
  60     | TAIL LTy ATm
  61     | ISNIL LTy ATm

  62  AppTm : PathTm
  63        | AppTm PathTm
  64        | PathTm TIMESFLOAT PathTm
  65        | FOLD LSQUARE Ty RSQUARE
  66        | UNFOLD LSQUARE Ty RSQUARE
  67        | FIX PathTm
  68        | REF PathTm
  69        | BANG PathTm
  70        | SUCC PathTm
  71        | PRED PathTm
  72        | ISZERO PathTm

  73  PathTm : PathTm DOT LCID
  74         | PathTm DOT INTV
  75         | AscribeTm

  76  AscribeTm : ATm AS Ty
  77            | ATm

  78  ATm : LPAREN TmSeq RPAREN
  79      | LCURLY Fields RCURLY
  80      | LT LCID EQ Tm GT AS Ty
  81      | LCID
  82      | STRINGV
  83      | FLOATV
  84      | UNIT
  85      | TRUE
  86      | FALSE
  87      | INTV
  88      | NIL LTy

  89  TmSeq : Tm
  90        | Tm SEMI TmSeq

  91  Fields :
  92         | NEFields

  93  NEFields : Field
  94           | Field COMMA NEFields

  95  Field : LCID EQ Tm
  96        | Tm

  97  %entry% : '\001' toplevel
  98          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (97)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	EOF  shift 30
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	toplevel  goto 34
	Command  goto 35
	TmWrap  goto 36
	Tm  goto 37
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 2
	%entry% : '\002' . input  (98)
	input : .  (1)

	.  reduce 1

	input  goto 42


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	AppTm : FOLD . LSQUARE Ty RSQUARE  (65)

	LSQUARE  shift 43
	.  error


state 5
	AppTm : UNFOLD . LSQUARE Ty RSQUARE  (66)

	LSQUARE  shift 44
	.  error


state 6
	AppTm : REF . PathTm  (68)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 46
	AscribeTm  goto 41


state 7
	Tm : TAIL . LTy ATm  (60)

	LSQUARE  shift 47
	.  error

	LTy  goto 48


state 8
	Tm : HEAD . LTy ATm  (59)

	LSQUARE  shift 47
	.  error

	LTy  goto 49


state 9
	Tm : ISNIL . LTy ATm  (61)

	LSQUARE  shift 47
	.  error

	LTy  goto 50


state 10
	Tm : CONS . LTy ATm ATm  (58)

	LSQUARE  shift 47
	.  error

	LTy  goto 51


state 11
	ATm : NIL . LTy  (88)

	LSQUARE  shift 47
	.  error

	LTy  goto 52


state 12
	Tm : LETREC . LCID COLON Ty EQ Tm IN Tm  (55)

	LCID  shift 53
	.  error


state 13
	AppTm : FIX . PathTm  (67)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 54
	AscribeTm  goto 41


state 14
	Tm : CASE . Tm OF Cases  (56)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 55
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 15
	ATm : UNIT .  (84)

	.  reduce 84


state 16
	Tm : LET . LCID EQ Tm IN Tm  (53)
	Tm : LET . USCORE EQ Tm IN Tm  (54)

	LCID  shift 56
	USCORE  shift 57
	.  error


state 17
	AppTm : SUCC . PathTm  (70)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 58
	AscribeTm  goto 41


state 18
	AppTm : PRED . PathTm  (71)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 59
	AscribeTm  goto 41


state 19
	AppTm : ISZERO . PathTm  (72)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 60
	AscribeTm  goto 41


state 20
	Tm : LAM . LCID DOT Tm  (49)
	Tm : LAM . LCID COLON Ty DOT Tm  (50)
	Tm : LAM . USCORE COLON Ty DOT Tm  (51)

	LCID  shift 61
	USCORE  shift 62
	.  error


state 21
	Tm : IF . Tm THEN Tm ELSE Tm  (52)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 63
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 22
	ATm : TRUE .  (85)

	.  reduce 85


state 23
	ATm : FALSE .  (86)

	.  reduce 86


state 24
	Command : UCID . TyBinder  (11)
	TyBinder : .  (13)

	EQ  shift 64
	SEMI  reduce 13
	DOUBLESEMI  reduce 13

	TyBinder  goto 65


state 25
	Command : LCID . Binder  (12)
	ATm : LCID .  (81)

	COLON  shift 66
	EQ  shift 67
	NIL  reduce 81
	TIMESFLOAT  reduce 81
	AS  reduce 81
	UNIT  reduce 81
	WHERE  reduce 81
	TRUE  reduce 81
	FALSE  reduce 81
	LCID  reduce 81
	INTV  reduce 81
	FLOATV  reduce 81
	STRINGV  reduce 81
	COLONEQ  reduce 81
	COMMA  reduce 81
	DOT  reduce 81
	LCURLY  reduce 81
	LPAREN  reduce 81
	LT  reduce 81
	SEMI  reduce 81
	DOUBLESEMI  reduce 81

	Binder  goto 68


state 26
	ATm : INTV .  (87)

	.  reduce 87


state 27
	ATm : FLOATV .  (83)

	.  reduce 83


state 28
	ATm : STRINGV .  (82)

	.  reduce 82


state 29
	AppTm : BANG . PathTm  (69)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	ATm  goto 39
	PathTm  goto 69
	AscribeTm  goto 41


state 30
	toplevel : EOF .  (8)

	.  reduce 8


state 31
	ATm : LCURLY . Fields RCURLY  (79)
	Fields : .  (91)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 70
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	RCURLY  reduce 91

	Tm  goto 71
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41
	Fields  goto 72
	NEFields  goto 73
	Field  goto 74


state 32
	ATm : LPAREN . TmSeq RPAREN  (78)

	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	.  error

	Tm  goto 75
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41
	TmSeq  goto 76


state 33
	ATm : LT . LCID EQ Tm GT AS Ty  (80)

	LCID  shift 77
	.  error


state 34
	%entry% : '\001' toplevel .  (97)

	.  reduce 97


state 35
	toplevel : Command . SEMI toplevel  (9)

	SEMI  shift 78
	.  error


state 36
	Command : TmWrap .  (10)
	TmWrap : TmWrap . COMMA LCID EQ Tm  (42)

	COMMA  shift 79
	SEMI  reduce 10
	DOUBLESEMI  reduce 10


state 37
	TmWrap : Tm . WHERE LCID EQ Tm  (43)
	TmWrap : Tm .  (44)

	WHERE  shift 80
	COMMA  reduce 44
	SEMI  reduce 44
	DOUBLESEMI  reduce 44


state 38
	Tm : AppTm .  (48)
	Tm : AppTm . COLONEQ AppTm  (57)
	AppTm : AppTm . PathTm  (63)

	NIL  shift 11
	UNIT  shift 15
	TRUE  shift 22
	FALSE  shift 23
	LCID  shift 45
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	COLONEQ  shift 81
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	OF  reduce 48
	WHERE  reduce 48
	IN  reduce 48
	THEN  reduce 48
	ELSE  reduce 48
	COMMA  reduce 48
	GT  reduce 48
	RCURLY  reduce 48
	RPAREN  reduce 48
	SEMI  reduce 48
	DOUBLESEMI  reduce 48

	ATm  goto 39
	PathTm  goto 82
	AscribeTm  goto 41


state 39
	AscribeTm : ATm . AS Ty  (76)
	AscribeTm : ATm .  (77)

	AS  shift 83
	NIL  reduce 77
	TIMESFLOAT  reduce 77
	OF  reduce 77
	UNIT  reduce 77
	WHERE  reduce 77
	IN  reduce 77
	THEN  reduce 77
	ELSE  reduce 77
	TRUE  reduce 77
	FALSE  reduce 77
	LCID  reduce 77
	INTV  reduce 77
	FLOATV  reduce 77
	STRINGV  reduce 77
	COLONEQ  reduce 77
	COMMA  reduce 77
	DOT  reduce 77
	GT  reduce 77
	LCURLY  reduce 77
	LPAREN  reduce 77
	LT  reduce 77
	RCURLY  reduce 77
	RPAREN  reduce 77
	SEMI  reduce 77
	VBAR  reduce 77
	DOUBLESEMI  reduce 77


state 40
	AppTm : PathTm .  (62)
	AppTm : PathTm . TIMESFLOAT PathTm  (64)
	PathTm : PathTm . DOT LCID  (73)
	PathTm : PathTm . DOT INTV  (74)

	TIMESFLOAT  shift 84
	DOT  shift 85
	NIL  reduce 62
	OF  reduce 62
	UNIT  reduce 62
	WHERE  reduce 62
	IN  reduce 62
	THEN  reduce 62
	ELSE  reduce 62
	TRUE  reduce 62
	FALSE  reduce 62
	LCID  reduce 62
	INTV  reduce 62
	FLOATV  reduce 62
	STRINGV  reduce 62
	COLONEQ  reduce 62
	COMMA  reduce 62
	GT  reduce 62
	LCURLY  reduce 62
	LPAREN  reduce 62
	LT  reduce 62
	RCURLY  reduce 62
	RPAREN  reduce 62
	SEMI  reduce 62
	VBAR  reduce 62
	DOUBLESEMI  reduce 62


state 41
	PathTm : AscribeTm .  (75)

	.  reduce 75


state 42
	input : input . LOAD  (2)
	input : input . SHOWCONTEXT DOUBLESEMI  (3)
	input : input . DOUBLESEMI  (4)
	input : input . oneREPL  (5)
	%entry% : '\002' input .  (98)

	LOAD  shift 86
	SHOWCONTEXT  shift 87
	FOLD  shift 4
	UNFOLD  shift 5
	REF  shift 6
	TAIL  shift 7
	HEAD  shift 8
	ISNIL  shift 9
	CONS  shift 10
	NIL  shift 11
	LETREC  shift 12
	FIX  shift 13
	CASE  shift 14
	UNIT  shift 15
	LET  shift 16
	SUCC  shift 17
	PRED  shift 18
	ISZERO  shift 19
	LAM  shift 20
	IF  shift 21
	TRUE  shift 22
	FALSE  shift 23
	UCID  shift 24
	LCID  shift 25
	INTV  shift 26
	FLOATV  shift 27
	STRINGV  shift 28
	BANG  shift 29
	LCURLY  shift 31
	LPAREN  shift 32
	LT  shift 33
	DOUBLESEMI  shift 88
	$end  reduce 98

	oneREPL  goto 89
	Command  goto 90
	TmWrap  goto 36
	Tm  goto 37
	AppTm  goto 38
	ATm  goto 39
	PathTm  goto 40
	AscribeTm  goto 41


state 43
	AppTm : FOLD LSQUARE . Ty RSQUARE  (65)

	REC  shift 91
	TOP  shift 92
	SOURCE  shift 93
	SINK  shift 94
	REFTYPE  shift 95
	LIST  shift 96
	STRING  shift 97
	FLOAT  shift 98
	UNITTYPE  shift 99
	BOOL  shift 100
	NAT  shift 101
	UCID  shift 102
	LCURLY  shift 103
	LPAREN  shift 104
	LT  shift 105
	.  error

	Ty  goto 106
	ArrowTy  goto 107
	ATy  goto 108


state 44
	AppTm : UNFOLD LSQUARE . Ty RSQUARE  (66)
